# ImHex

./: CMakeLists.txt
cmake/: build_helpers.cmake
lib/libimhex/include/hex/api/: event_manager.hpp
lib/libimhex/include/hex/api/events/: events_gui.hpp  requests_provider.hpp
lib/libimhex/include/hex/ui/: view.hpp
lib/libimhex/source/helpers/: default_paths.cpp
main/gui/source/: main.cpp
main/gui/source/init/run/: native.cpp
main/gui/source/window/: window.cpp
plugins/builtin/source/content/: welcome_screen.cpp
